--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.538.0",
     "@types/express": "^4.17.9",
     "@types/uuid": "^8.3.0",
     "axios": "^0.21.0",
