--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "serverless offline",
+    "deploy": "serverless deploy"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.538.0",
@@ -23,6 +25,7 @@
     "@types/jest": "^26.0.16",
     "@types/node": "^14.14.6",
     "aws-sdk": "^2.803.0",
+    "esbuild-loader": "^4.1.0",
     "fork-ts-checker-webpack-plugin": "^6.0.0",
     "jest": "^26.6.3",
     "serverless-dynamodb-local": "^0.2.39",
